Fix sort/filter bug in Channel List View

BUG:296912